# payrollos-community

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css  main.js
frontend/src/components/: AppShell.vue  FeatureGate.vue
frontend/src/composables/: useFeature.js
frontend/src/data/: nav.js  session.js
frontend/src/pages/: Dashboard.vue  EmployeeDetail.vue  Employees.vue  FeatureLockedPage.vue  Login.vue  NotFound.vue  PayslipDetail.vue  PayslipList.vue  RunDetail.vue  RunPayroll.vue  SalaryStructures.vue  Settings.vue
frontend/src/router/: index.js
payroll_os_community/: hooks.py  modules.txt  patches.txt
payroll_os_community/api/: dashboard.py  employees.py  payroll_runs.py  payslips.py  pro.py  salary_structures.py  session.py
payroll_os_community/www/: payrollos_ce.py
